<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/DP8"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_title_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/SP18"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/DP8"
        android:text="Payment Confirmed"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/green"/>

    <ImageView
        android:id="@+id/img_status_recharge"
        android:layout_width="@dimen/DP90"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/DP90" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/bla_trans"
        android:textSize="@dimen/SP14"
        android:padding="@dimen/DP6"/>

    <TextView
        android:id="@+id/txt_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor=" @color/blue"
        android:text="@string/free_to_contact"
        android:textSize="@dimen/SP10"
        android:padding="@dimen/DP6"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_okay"
            android:layout_width="match_parent"
            android:layout_weight="0.50"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/DP10"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_recipt"
            android:layout_width="match_parent"
            android:layout_weight="0.50"
            android:layout_height="wrap_content"
            android:text="@string/reciept"
            android:textColor="@color/white"
            android:background="@color/green"
            android:layout_margin="@dimen/DP10"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>