<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.CreateAccount">

   <!-- <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/acc"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/SP18" />-->

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/DP100"
        android:layout_height="@dimen/DP100"
        android:src="@mipmap/app_logo"
        android:padding="@dimen/DP8"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/DP20"/>

    <LinearLayout
        android:layout_below="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <include layout="@layout/header_image"
            android:layout_margin="@dimen/DP15"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAcc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP60"
            android:layout_marginLeft="@dimen/DP40"
            android:layout_marginRight="@dimen/DP40"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/create_acc"
            android:textColor="@color/white"
            android:textSize="@dimen/SP18"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:text="@string/or"
            android:textColor="@color/grey_medium"
            android:textSize="@dimen/SP16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:text="@string/sign_up_with"
            android:textColor="@color/black"
            android:textSize="@dimen/SP16"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tvfb"
                android:layout_width="@dimen/DP80"
                android:layout_height="@dimen/DP80"
                android:layout_margin="@dimen/DP8"
                android:padding="@dimen/DP8"
                android:layout_gravity="center"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/tw_btn"
                android:layout_width="@dimen/DP80"
                android:layout_height="@dimen/DP80"
                android:layout_margin="@dimen/DP8"
                android:padding="@dimen/DP8"
                android:layout_gravity="center"
                android:src="@drawable/ic_twitter"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/tvGoogle"
                android:layout_width="@dimen/DP80"
                android:layout_height="@dimen/DP80"
                android:layout_margin="@dimen/DP8"
                android:padding="@dimen/DP8"
                android:layout_gravity="center"
                android:src="@drawable/ic_google_plus"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP1"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="@dimen/DP20"
            android:layout_below="@+id/view"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_acc"
                android:textColor="@color/light_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/DP10"
                android:text="@string/sign_in"
                android:textColor="@color/splash_color"
                android:textSize="@dimen/SP18" />

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>