<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.ServiceQuestions">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP60"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCancel"
                android:layout_width="@dimen/DP50"
                android:layout_height="@dimen/DP50"
                android:layout_gravity="center"
                android:src="@mipmap/cancel_gry"
                android:padding="@dimen/DP15"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Post Enquiry"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/splash_color"
                    android:textSize="@dimen/SP20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Get Quotes"
                    android:textColor="@color/grey_txt"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/SP13" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP1"
            android:background="#c2c2c2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP100"
            android:layout_marginTop="@dimen/DP15"
            android:src="@mipmap/attach_form" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DP20"
            android:layout_marginRight="@dimen/DP20"
            android:gravity="center"
            android:text="@string/form_txt"
            android:textColor="@color/grey_dark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DP20"
            android:layout_marginRight="@dimen/DP20"
            android:gravity="center"
            android:text="@string/form_txt2"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10sp"
            android:background="@color/gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            android:padding="@dimen/DP10" />

        <Button
            android:id="@+id/btnAttach"
            android:layout_width="@dimen/DP130"
            android:layout_height="@dimen/DP35"
            android:layout_gravity="end"
            android:layout_margin="@dimen/DP10"
            android:background="@drawable/button_background"
            android:text="@string/attach"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/SP16" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>